Question-1/3-tier-vpc-set-up.yml
#This CFT will create a 3-tier VPC set up.
AWSTemplateFormatVersion: 2010-09-09
Description: 'Template for VPC installation'
Metadata:
  Author: Rahul Raj
Parameters:
# Parameters for VPC:
  EnvironmentName:
    Description: Enter the desired name of the environment.
    Type: String
  NameoftheVPC:
    Type: String
    Description: Enter the name of the environment VPC.
    Default: KPMG
  OverallVPCRange:
    Type: String
    Description: Enter CIDR range for VPC
    Default: 10.0.0.0/16
  PublicSubnet01IP:
    Type: String
    Description: Enter CIDR range for Public-subnet 01
    Default: 10.0.1.0/24
  PublicSubnet02IP:
    Type: String
    Description: Enter CIDR range for Public-subnet 02
    Default:  10.0.2.0/24
  PrivateSubnet03IP:
    Type: String
    Description: Enter CIDR range for Private-subnet 03
    Default: 10.0.3.0/24
  PrivateSubnet04IP:
    Type: String
    Description: Enter CIDR range for Private-subnet 04
    Default: 10.0.4.0/24
  EC2Tenancy:
    Description: Please enter The allowed tenancy of instances launched into the VPC
    Type: String
    AllowedValues:
    - 'default'
    - 'dedicated'
Resources:
  #VPC Detail
  KPMGVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref OverallVPCRange
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: !Ref EC2Tenancy
      Tags:
        - Key: Name
          Value: !Sub 
            - '${repl}-vpc'
            - repl: !Ref NameoftheVPC
  #Public subnet 1 detail
  PublicSubnet01:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref KPMGVPC
      CidrBlock: !Ref PublicSubnet01IP
      MapPublicIpOnLaunch: true
      AvailabilityZone: 
        Fn::Select: 
        - 0
        - Fn::GetAZs: 
            Ref: "AWS::Region"
      Tags:
        - Key: Name
          Value: PublicSubnet01-Public
  #Public subnet 2 detail
  PublicSubnet02:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref KPMGVPC
      CidrBlock: !Ref PublicSubnet02IP
      MapPublicIpOnLaunch: true
      AvailabilityZone: 
        Fn::Select: 
        - 1
        - Fn::GetAZs: 
            Ref: "AWS::Region"
      Tags:
        - Key: Name
          Value: PublicSubnet02-Public
  #Private subnet 1 detail
  PrivateSubnet03:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref KPMGVPC
      CidrBlock: !Ref PrivateSubnet03IP
      MapPublicIpOnLaunch: false
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs:
            Ref: "AWS::Region"
      Tags:
        - Key: Name
          Value: PrivateSubnet03-Priv
  #Private subnet 2 detail
  PrivateSubnet04:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref KPMGVPC
      CidrBlock: !Ref PrivateSubnet04IP
      MapPublicIpOnLaunch: false
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs:
            Ref: "AWS::Region"
      Tags:
        - Key: Name
          Value: PrivateSubnet04-Priv
  #Internet gateway detail
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: IGateway
  AttachGateway:
    DependsOn: InternetGateway
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref KPMGVPC
      InternetGatewayId: !Ref InternetGateway
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref KPMGVPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-pub-rt-01
  PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref KPMGVPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-priv-rt-02
  PrivateRouteTable1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref KPMGVPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-priv-rt-03
  EIP1:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  EIP2:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  NATGateway1:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt
        - EIP1
        - AllocationId
      SubnetId: !Ref PublicSubnet01
      Tags:
        - Key: Name
          Value: NatGateway
  NATGateway2:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt
        - EIP2
        - AllocationId
      SubnetId: !Ref PublicSubnet02
      Tags:
        - Key: Name
          Value: NatGateway
  PubSubnet01RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet01
  PubSubnet02RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet02
  PrivSubnet03RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet03
  PrivSubnet04RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet04
  PrivRoute:
    DependsOn: NATGateway1
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway1
  PrivRoute1:
    DependsOn: NATGateway2
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway2
  PubRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref KPMGVPC

  PublicSubnets:
    Description: A list of the public subnets
    Value: !Join [ ",", [ !Ref PublicSubnet01, !Ref PublicSubnet02 ]]

  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join [ ",", [ !Ref PrivateSubnet03, !Ref PrivateSubnet04 ]]

  PublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet01

  PublicSubnet2:
    Description: A reference to the public subnet in the 2nd Availability Zone
    Value: !Ref PublicSubnet02

  PrivateSubnet1:
    Description: A reference to the private subnet in the 1st Availability Zone
    Value: !Ref PrivateSubnet03

  PrivateSubnet2:
    Description: A reference to the private subnet in the 2nd Availability Zone
    Value: !Ref PrivateSubnet04
